feat: Добавил отображение новости на странице

--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -20,6 +20,7 @@
 @import "../../components/page/educationsPrograms/style/educationsPrograms";
 @import "../../components/page/homePage/universityNews/style/university-news";
 @import "../../components/page/editorNewsPage/style/editor-news-page";
+@import "../../components/page/oneNewsPage/style/one-news-page";
 // common
 @import "../../components/common/phoneMenu/style/phoneMenu";
 @import "../../components/common/breadCrumbs/style/breadCrumbs";
@@ -55,6 +56,7 @@
 @import "../../components/ui/left-panel/style/left-panel";
 @import "../../components/ui/scroll-up/style/scroll-up";
 @import "../../components/ui/newsCardsWrapper/style/news-cards-wrapper";
+
 // -----------------------loyouts---------------------
 @import "../../layouts/sveden/style/sveden";
 @import "../../layouts/auth/style/auth-left-panel";
