--- a/src/app/style/style.scss
+++ b/src/app/style/style.scss
@@ -79,6 +79,25 @@ h6 {
   font-weight: 400;
 }
 
+.app__wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  &-leftPanel {
+    width: 4%;
+  }
+}
+.header-wrapper {
+  flex: 0 0 auto;
+}
+.main-wrapper {
+  flex: 1 0 auto;
+  margin-left: 4%;
+  margin-top: 10vh;
+}
+.footer-wrapper {
+  flex: 0 0 auto;
+}
 ._container {
   /*технический класс, содержит общие стили*/
   max-width: 1270px;
@@ -143,44 +162,28 @@ li {
   }
 }
 
-.app__wrapper {
-  &-leftPanel {
-    width: 4%;
-  }
-
-  &-main {
-    position: absolute;
-    width: 96%;
-    left: 4%;
-    top: 10%;
-  }
-}
-.app__wrapper-main-black {
+.main-wrapper-black {
+  flex: 1 0 auto;
+  margin-left: 4%;
+  margin-top: 10vh;
   background-color: black;
-  &-leftPanel {
-    width: 4%;
-  }
-
-  &-main {
-    position: absolute;
-    width: 96%;
-    left: 4%;
-    top: 10%;
-  }
+  color: white;
 }
-.app__wrapper-main-contrast {
+.main-wrapper-white {
+  flex: 1 0 auto;
+  margin-left: 4%;
+  margin-top: 10vh;
+  background-color: white;
+  color: black;
+}
+.main-wrapper-contrast {
+  flex: 1 0 auto;
+  margin-left: 4%;
+  margin-top: 10vh;
   background-color: $BACK_CONTRAST;
-  &-leftPanel {
-    width: 4%;
-  }
-
-  &-main {
-    position: absolute;
-    width: 96%;
-    left: 4%;
-    top: 10%;
-  }
+  color: $FONT_CONTRAST;
 }
+
 @media screen and (max-width: 1270px) {
   .app__wrapper {
     &-leftPanel {
@@ -194,6 +197,33 @@ li {
       left: 0%;
       top: 0%;
     }
+  }
+
+  .main-wrapper {
+    flex: 1 0 auto;
+    margin-left: 0%;
+    margin-top: 0vh;
+  }
+  .main-wrapper-black {
+    flex: 1 0 auto;
+    margin-left: 0%;
+    margin-top: 0vh;
+    background-color: black;
+    color: white;
+  }
+  .main-wrapper-white {
+    flex: 1 0 auto;
+    margin-left: 0%;
+    margin-top: 0vh;
+    background-color: white;
+    color: black;
+  }
+  .main-wrapper-contrast {
+    flex: 1 0 auto;
+    margin-left: 0%;
+    margin-top: 0vh;
+    background-color: $BACK_CONTRAST;
+    color: $FONT_CONTRAST;
   }
 }
 .spinWrapper {
