--- a/src/app/components/page/schedule/style/_schedule.scss
+++ b/src/app/components/page/schedule/style/_schedule.scss
@@ -1,12 +1,15 @@
 @import "../../../../style/variables";
 .schedule__container {
-  position: absolute;
+  position: static;
   z-index: 11;
-  top: 0;
   width: 100%;
-  height: 3000px;
   background-color: $MENU_COLOR;
   color: white;
+  .date {
+    width: 180px;
+    text-align: center;
+    /*   padding: 0.5em 1em; */
+  }
 }
 .schedule__wrapper {
   max-width: 900px;
