--- a/src/app/components/page/schedule/style/_auto-schedule.scss
+++ b/src/app/components/page/schedule/style/_auto-schedule.scss
@@ -63,6 +63,15 @@
   }
 }
 .auto-schedule__container-lessons-container {
+  .group-name {
+    font-size: 24px;
+    color: #325572;
+    font-weight: 500;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    padding: 15px;
+  }
   .absent {
     height: 50px;
     text-align: center;
@@ -188,12 +197,15 @@
 }
 
 @media screen and (max-width: 592px) {
-  .auto-schedule__container-groups-container {
-    padding: 15px 0px;
-    .select {
-      width: 100%;
-      margin-left: 5px;
-      margin-right: 5px;
+  .auto-schedule__container {
+    padding: 10px;
+    .auto-schedule__container-groups-container {
+      padding: 15px 0px;
+      .select {
+        width: 100%;
+        margin-left: 5px;
+        margin-right: 5px;
+      }
     }
   }
 }
