--- a/src/app/components/page/schedule/style/_auto-schedule.scss
+++ b/src/app/components/page/schedule/style/_auto-schedule.scss
@@ -3,6 +3,7 @@
   width: 100%;
   height: 100%;
   padding: 30px;
+  font-size: 18px;
 }
 .back_white {
   background-color: white !important;
@@ -63,15 +64,38 @@
   }
 }
 .auto-schedule__container-lessons-container {
-  .group-name {
-    font-size: 24px;
-    color: #325572;
-    font-weight: 500;
-    background-color: white;
+  .group-info {
     width: 100%;
     height: 100%;
     padding: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: white;
+    .first-container {
+      display: flex;
+
+      .group-info-name {
+        font-size: 24px;
+        color: #325572;
+        font-weight: 500;
+        margin-right: 5px;
+      }
+      .group-info-mark {
+        cursor: pointer;
+      }
+    }
+    .second-container {
+      color: #325572;
+      .group-info-date {
+        margin-bottom: 5px;
+      }
+      .group-info-week {
+        text-align: center;
+      }
+    }
   }
+
   .absent {
     height: 50px;
     text-align: center;
@@ -210,12 +234,15 @@
   }
 }
 @media screen and (max-width: 570px) {
-  .auto-schedule__container-date-container {
-    padding-left: 0px;
-    padding-right: 0px;
-    .button {
-      width: 100%;
-      margin: 5px;
+  .auto-schedule__container {
+    padding: 10px 0 10px 0;
+    .auto-schedule__container-date-container {
+      padding-left: 0px;
+      padding-right: 0px;
+      .button {
+        width: 100%;
+        margin: 5px;
+      }
     }
   }
 }
