--- a/src/app/components/page/schedule/style/_auto-schedule.scss
+++ b/src/app/components/page/schedule/style/_auto-schedule.scss
@@ -52,6 +52,18 @@
     height: 40px;
   }
 }
+.auto-schedule__container-teacher-container {
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 15px 30px;
+  .select {
+    width: 100%;
+    height: 40px;
+  }
+}
 .auto-schedule__container-date-container {
   display: flex;
   flex-wrap: wrap;
@@ -177,6 +189,14 @@
   .auto-schedule__container-groups-container {
     padding: 15px 0px;
     .select {
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+  }
+  .auto-schedule__container-teacher-container {
+    padding: 15px 0px;
+    .select {
+      width: 100%;
       margin-left: 5px;
       margin-right: 5px;
     }
