--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -19,6 +19,7 @@
 @import "../../components/page/schedule/style/schedule";
 @import "../../components/page/educationsPrograms/style/educationsPrograms";
 @import "../../components/page/schedule/style/auto-schedule";
+@import "../../components/page/homePage/reviews/style/reviews";
 // common
 @import "../../components/common/phoneMenu/style/phoneMenu";
 @import "../../components/common/breadCrumbs/style/breadCrumbs";
