--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -63,3 +63,4 @@
 @import "../../components/ui/scroll-up/style/scroll-up";
 // -----------------------loyouts---------------------
 @import "../../layouts/sveden/style/sveden";
+@import "../../layouts/auth/style/auth-left-panel";
