feat: реализация логики носотей

--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -22,6 +22,7 @@
 @import "../../components/page/homePage/reviews/style/reviews";
 @import "../../components/page/homePage/universityNews/style/university-news";
 @import "../../components/page/one-news-page/style/one-news-page";
+@import "../../components/page/create-news-page/style/create_new_page";
 // common
 @import "../../components/common/phoneMenu/style/phoneMenu";
 @import "../../components/common/breadCrumbs/style/breadCrumbs";
