feat: расписание и приемная кампания 2024

--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -20,6 +20,7 @@
 @import "../../components/page/educationsPrograms/style/educationsPrograms";
 @import "../../components/page/schedule/style/auto-schedule";
 @import "../../components/page/homePage/reviews/style/reviews";
+@import "../../components/page/enrollee/applicants/reception/style/reception";
 // common
 @import "../../components/common/phoneMenu/style/phoneMenu";
 @import "../../components/common/breadCrumbs/style/breadCrumbs";
