--- a/src/app/style/style.scss
+++ b/src/app/style/style.scss
@@ -144,19 +144,19 @@ h6 {
   overflow: hidden;
 }
 .min-height {
-  min-height: 600px;
+  min-height: 100%;
   background-color: $BLUE;
 }
 .min-height-white {
-  min-height: 600px;
+  min-height: 100%;
   background-color: white;
 }
 .min-height-black {
-  min-height: 600px;
+  min-height: 100%;
   background-color: black;
 }
 .min-height-contrast {
-  min-height: 600px;
+  min-height: 100%;
   background-color: $BACK_CONTRAST;
 }
 li {
