feat: исправил отображение новостей

--- a/src/app/components/page/create-news-page/style/_create_new_page.scss
+++ b/src/app/components/page/create-news-page/style/_create_new_page.scss
@@ -1,6 +1,14 @@
 @import "../../../../style/variables";
 
+.admin-wrapper {
+  padding-top: 20px;
+  min-height: 100%;
+}
+.editor-news-page_wrapper {
+  background-color: black;
+}
 .editor-news-page_select-container {
+  background-color: black;
   .margin-top-bg {
     margin-top: 15px;
   }
