--- a/src/app/components/page/learning/style/_learning.scss
+++ b/src/app/components/page/learning/style/_learning.scss
@@ -3,6 +3,7 @@
 .education__container {
   background-color: $BLUE;
   color: $BLUE_FONT_COLOR;
+  min-height: 100%;
   padding: 1em 0.5em;
   h1,
   h2 {
