--- a/src/app/components/page/one-news-page/style/_one-news-page.scss
+++ b/src/app/components/page/one-news-page/style/_one-news-page.scss
@@ -1,65 +1,3 @@
-/* @import "../../../../style/variables";
-.one-news-page_container {
-  position: relative;
-  align-items: center;
-  text-align: center;
-  min-height: 500px;
-  padding-bottom: 200px;
-  h1 {
-    font-size: 24px;
-    font-weight: bold;
-    text-align: center;
-    margin: 20px 0;
-  }
-  .image-news {
-    float: left;
-    max-height: 400px !important;
-    max-width: 600px;
-    margin: 10px;
-    object-fit: cover;
-    img {
-      border-radius: 5px !important;
-      max-height: 100%;
-      max-width: 100%;
-    }
-  }
-}
-
-.one-news-page_container-admin {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  display: flex;
-  flex-wrap: wrap;
-
-  padding: 20px;
-  justify-content: space-between;
-  &-author {
-    font-weight: 500;
-    margin: 0px 10px;
-    padding: 5px 10px;
-    min-width: 300px;
-  }
-  &-btns {
-    display: flex;
-    flex-wrap: wrap;
-    div button {
-      padding: 5px 10px;
-      border-radius: 2px;
-      margin: 5px 10px;
-      min-width: 300px;
-    }
-  }
-  .edit {
-    background-color: #1677ff;
-    color: white;
-  }
-  .delite {
-    background-color: #a8071a;
-    color: white;
-  }
-}
- */
 @import "../../../../style/variables";
 .one-news-page_container {
   position: relative;
@@ -67,6 +5,9 @@
   text-align: center;
   min-height: 500px;
   padding-bottom: 200px;
+  .text-content {
+    overflow: hidden;
+  }
   h1 {
     font-size: 24px;
     font-weight: bold;
@@ -75,21 +16,21 @@
   }
   .image-news {
     float: left;
-    max-height: 400px !important;
+    height: 400px;
     max-width: 600px;
-    margin: 10px;
-    /*    overflow: hidden; */
-    object-fit: cover;
+    margin: 10px 20px;
+    border-radius: 5px;
     img {
+      margin: 0 auto;
       border-radius: 5px !important;
       max-height: 100%;
       max-width: 100%;
+      object-fit: cover;
     }
   }
 }
 
 .one-news-page_container-admin {
-  position: absolute;
   width: 100%;
   bottom: 0;
   display: flex;
@@ -99,7 +40,7 @@
   justify-content: space-between;
   &-author {
     font-weight: 500;
-    margin: 0px 10px;
+    margin: 5px 10px;
     padding: 5px 10px;
     min-width: 300px;
   }
@@ -122,6 +63,25 @@
     color: white;
   }
 }
-/* .one-news-page_container-admin-author {
-  font-weight: 500;
-} */
+@media screen and (max-width: 1000px) {
+  .one-news-page_container {
+    .image-news {
+      float: none;
+      margin: 0 auto;
+      margin-bottom: 30px;
+    }
+  }
+}
+@media screen and (max-width: 1100px) {
+  .one-news-page_container-admin {
+    display: flex;
+    justify-content: center;
+  }
+}
+@include tablets {
+  .one-news-page_container-admin {
+    &-btns {
+      justify-content: center;
+    }
+  }
+}
