feat: изменил стили админ панели

--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -23,6 +23,7 @@
 @import "../../components/page/homePage/universityNews/style/university-news";
 @import "../../components/page/one-news-page/style/one-news-page";
 @import "../../components/page/create-news-page/style/create_new_page";
+@import "../../components/page/admin-panel/style/admin-panel";
 // common
 @import "../../components/common/phoneMenu/style/phoneMenu";
 @import "../../components/common/breadCrumbs/style/breadCrumbs";
