--- a/src/app/layouts/auth/style/_auth-left-panel.scss
+++ b/src/app/layouts/auth/style/_auth-left-panel.scss
@@ -63,12 +63,15 @@
     border: solid 1px $FONT_CONTRAST;
   }
 }
-
+.auth-margin {
+  padding-top: 20px !important;
+}
 .auth-wrapper {
   display: flex;
   flex-wrap: wrap;
   width: fit-content;
   justify-content: center;
+  min-height: 600px;
   margin: 0 auto;
   -webkit-box-shadow: 0px 2px 10px -7px rgba(12, 28, 43, 0.81);
   -moz-box-shadow: 0px 2px 10px -7px rgba(12, 28, 43, 0.81);
@@ -77,6 +80,7 @@
     width: 400px;
     background-color: white;
     padding: 15px;
+    margin: 0;
     position: relative;
     button {
       background-color: white;
