feat: добавил интервью

--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -24,6 +24,7 @@
 @import "../../components/page/one-news-page/style/one-news-page";
 @import "../../components/page/create-news-page/style/create_new_page";
 @import "../../components/page/admin-panel/style/admin-panel";
+@import "../../components/page/live/interview/style/interview";
 // common
 @import "../../components/common/phoneMenu/style/phoneMenu";
 @import "../../components/common/breadCrumbs/style/breadCrumbs";
