--- a/src/app/components/ui/logIn/style/_logIn.scss
+++ b/src/app/components/ui/logIn/style/_logIn.scss
@@ -86,6 +86,17 @@
     padding: 10px;
     width: 100%;
     height: 100%;
+    .navigate-button {
+      width: 95%;
+      margin-left: 2.5%;
+      text-align: center;
+
+      margin-top: 60px;
+      color: white;
+      height: 50px;
+      border-radius: 5px;
+      border: solid 1px white;
+    }
     .mobileLoggin_navContainer {
       display: flex;
       justify-content: space-between;
@@ -101,13 +112,23 @@
     form {
       align-items: center;
       .mobileLoggin_btn {
-        width: 80%;
-        margin-left: 10%;
+        width: 95%;
+        margin-left: 2.5%;
+        text-align: center;
+
         margin-top: 60px;
         color: white;
         height: 50px;
-        border-radius: 25px;
+        border-radius: 5px;
         border: solid 1px white;
+      }
+      .message {
+        color: white;
+        margin-left: 2.5%;
+        margin-top: 10px;
+      }
+      .message.error {
+        color: $RED_COLOR;
       }
     }
   }
