feat: добавил виртуальную приемную

--- a/src/app/style/components/index.scss
+++ b/src/app/style/components/index.scss
@@ -57,5 +57,6 @@
 @import "../../components/ui/partners-container/style/partners-container";
 @import "../../components/ui/left-panel/style/left-panel";
 @import "../../components/ui/scroll-up/style/scroll-up";
+@import "../../components/ui/quiz-button/style/quiz-button";
 // -----------------------loyouts---------------------
 @import "../../layouts/sveden/style/sveden";
