--- a/src/app/components/ui/scroll-up/style/_scroll-up.scss
+++ b/src/app/components/ui/scroll-up/style/_scroll-up.scss
@@ -1,35 +1,34 @@
 @import "../../../../style/variables";
 
 .scroll-up {
-    position: fixed;
-    background-color: #8090bec3;
-    right: 20px;
-    bottom: 20px;
-    border-radius: 22px;
-    cursor: pointer;
-    width: 44px;
-    height: 44px;
-    z-index: 1000;
+  position: fixed;
+  background-color: $MENU_COLOR;
+  right: 20px;
+  bottom: 75px;
+  border-radius: 22px;
+  cursor: pointer;
+  width: 44px;
+  height: 44px;
+  z-index: 1000;
+}
+
+.scroll-up::before {
+  content: "";
+  text-align: center;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  left: 9px;
+  top: 9px;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='25' viewBox='0 0 20 20'%3E%3Cg fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M10 17V4M3 10l7-7 7 7'/%3E%3C/g%3E%3C/svg%3E");
+}
+
+.scroll-up_hide {
+  display: none;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .scroll-up:hover {
+    background-color: #184c7a;
   }
-
-  .scroll-up::before {
-    content: "";
-    text-align: center;
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    left: 12px;
-    top: 12px;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cg fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M10 17V4M3 10l7-7 7 7'/%3E%3C/g%3E%3C/svg%3E");
-  }
-
-  .scroll-up_hide {
-      display: none;
-    }
-
-    @media (hover: hover) and (pointer: fine) {
-      .scroll-up:hover {
-        background-color: #8090be;
-      }
-    }
-    
+}
