--- a/src/app/components/ui/quiz-button/style/_quiz-button.scss
+++ b/src/app/components/ui/quiz-button/style/_quiz-button.scss
@@ -20,7 +20,10 @@
 
   animation: blink 1s;
   animation-iteration-count: 5;
-
+  overflow: hidden;
+  .description {
+    opacity: 0;
+  }
   .icon-help {
     font-size: 25px;
     position: absolute;
@@ -52,16 +55,66 @@
   }
 }
 
-/* .quiz-button::before {
-  content: "";
-  text-align: center;
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  left: 12px;
-  top: 12px;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cg fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath d='M10 17V4M3 10l7-7 7 7'/%3E%3C/g%3E%3C/svg%3E");
-} */
+.quiz-button:hover {
+  position: fixed;
+  color: white;
+  background-color: $MENU_COLOR;
+  right: 20px;
+  bottom: 20px;
+  border-radius: 22px;
+  cursor: pointer;
+  width: 250px;
+  height: 44px;
+  z-index: 1000;
+  -webkit-transition: width 0.25s ease;
+  -moz-transition: width 0.25s ease;
+  transition: width 0.25s ease;
+
+  animation: blink 1s;
+  animation-iteration-count: 5;
+  overflow: hidden;
+  .description {
+    font-size: 17px;
+    font-style: italic;
+    font-weight: 500;
+
+    opacity: 1;
+    transition: opacity 0.5s linear;
+    position: relative;
+    top: 50%;
+    left: 55%;
+    transform: translate(-50%, -55%);
+  }
+  .icon-help {
+    font-size: 25px;
+    position: absolute;
+    top: 72.2%;
+    left: 93.3%;
+    transform: translate(-72.2%, -93.3%);
+  }
+
+  &-content {
+    border-top: solid 1px #878181;
+    padding: 20px 0;
+    p {
+      font-size: 18px;
+    }
+
+    .button-container {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+    }
+    h2 {
+      text-align: center;
+      font-size: 20px;
+      font-weight: 500;
+    }
+    color: white;
+    text-align: justify;
+    font-size: 16px;
+  }
+}
 
 @media (hover: hover) and (pointer: fine) {
   .quiz-button:hover {
